--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mpvue": "^1.0.11",
     "mpvue-router-patch": "^0.2.1"
   },
@@ -22,7 +24,7 @@
     "babel-register": "^6.22.0",
     "chalk": "^2.4.0",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
