--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-mpvue-wxss": "^1.0.0",
     "px2rpx-loader": "^0.1.10",
     "rimraf": "^2.6.0",
+    "sass-resources-loader": "^2.0.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
