--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,8 @@
 	"compileType": "miniprogram",
 	"appid": "wx4555d1c30a84fb6c",
 	"projectname": "%E4%B8%8A%E9%A5%B6%E5%B0%8F%E9%BB%84%E8%9C%82",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
